fix submit button & add scrollbar when overflow

--- a/styles.css
+++ b/styles.css
@@ -48,9 +48,9 @@ body{
 
 
 .form-section{
-    margin-top: 2vh;
+    margin-top: 1vh;
     width: 40vw;
-    padding: 30px;
+    padding-left: 30px;
     font-family: 'Courier New', Courier, monospace;
 }
 .form-section > form{
@@ -64,24 +64,32 @@ body{
     font-size: calc(7px + 1vmin);
 }
 form>legend{
-    font-size: calc(12px + 2vmin);
+    font-size: calc(12px + 1vmin);
     font-weight: bold;
-    margin-bottom: 5px;
+    margin-bottom: calc(5px + 1vmin);
 }
 form > ul{
     
     border-radius: 8px;
-    height: 40vh;
+    height: 100%;
     list-style-type: none;
     margin: 0;
     padding: 0;
     display: flex;
+    min-height: 10px;
+    overflow-y: auto;
     flex-direction: column;
-    justify-content: flex-start;
+    justify-content: space-evenly;
+}
+@media (max-height: 600px) {
+    form > ul{
+        justify-content:start;
+        margin: auto;
+    }
     
 }
 ul > li {
-    margin-top: 20px;
+    margin-top: 2vmin;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
@@ -133,10 +141,10 @@ input:focus{
 }
 .submit-btn{
     font-family: 'Courier New', Courier, monospace;
-    font-size: 2vh;
+    font-size: calc(7px + 1vmin);
     font-weight: bold;
     width: calc(40px + 10vw);
-    height: 5vh;
+    height: calc(10px + 5vh);
     background-color: bisque;
     border-radius: 8px;
 }
